--- a/html/login.html
+++ b/html/login.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <title>ログイン</title>
+    <title>登録画面</title>
 </head>
+
 <body>
     <input type="text" class="text_area">
-    <!-- <input type="password" name="" id="password_area"> -->
-    <!-- 認証エリア -->
-    <input type="text" class="certification_area">
-<button class="set_local">ストレージ保存</button>
-<button class="remove_local">ストレージ削除</button>
-<button class="certification_local">ストレージ認証</button>
+    <button class="set_local">ストレージ保存</button>
+    <button class="remove_local">ストレージ削除</button>
+    <button class="login_button">確認画面に移動する</button>
 
-    
-<script src="/js/login.js"></script>
+
+
+    <script src="/js/login.js"></script>
 </body>
+
 </html>
