--- a/html/login.html
+++ b/html/login.html
@@ -6,14 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/login.css">
     <title>登録画面</title>
 </head>
 
 <body>
-    <input type="text" class="text_area">
-    <button class="set_local">ストレージ保存</button>
-    <button class="remove_local">ストレージ削除</button>
-    <button class="login_button">確認画面に移動する</button>
+    <h1>初期画面</h1>
+    <div class="top">
+        <button class="login_button">確認画面に移動する</button>
+        <button class="enter_button">たくさん入力画面に移動する</button>
+    </div>
+    <div class="top">
+        <input type="text" class="text_area">
+        <button class="set_local">ストレージ保存</button>
+        <button class="remove_local">ストレージ削除</button>
+    </div>
+
+
+
 
 
 
