--- a/html/enter.html
+++ b/html/enter.html
@@ -11,28 +11,20 @@
 </head>
 
 <body>
-    <h1>入力画面</h1>
-    <div class="input_area">
-        <input type="text" class="title">
-        <textarea name="" class="text_area"></textarea>
-        <input type="date" name="日付" id="date">
-        <!-- <button class="hekou">音声確認表示</button> -->
-        <button class="back_button">登録画面に戻る</button>
-    </div>
+    <input type="text" class="title">
+    <textarea name="" class="text_area"></textarea>
+
     <div class="button_area">
         <button class="set_local">保存する</button>
         <button class="remove_local">ストレージ削除</button>
+        <button class="display">表示する</button>
     </div>
 
-    <div class="display_area">
-        <button class="display">表示</button>
-        <input type="text" class="title_test">
-        <textarea name="" class="text_area_test"></textarea>
+    <div id="memoArea">
     </div>
 
 
-
-    <script src="/js/enter.js"></script>
+    <script src="/js/enter2.js"></script>
 </body>
 
 </html>
