--- a/html/enter.html
+++ b/html/enter.html
@@ -11,13 +11,18 @@
 </head>
 
 <body>
-    <input type="text" class="title">
-    <textarea name="" class="text_area"></textarea>
+    <div class="register_area">
+        <input type="text" class="title">
+        <textarea name="" class="text_area"></textarea>
+    </div>
 
     <div class="button_area">
-        <button class="set_local">保存する</button>
+        <div class="Select_button">
+            <button class="set_local">保存する</button>
+            <button class="display">表示する</button>
+        </div>
         <button class="remove_local">ストレージ削除</button>
-        <button class="display">表示する</button>
+
     </div>
 
     <div id="memoArea">
