--- a/html/enter.html
+++ b/html/enter.html
@@ -11,22 +11,28 @@
 </head>
 
 <body>
-    <div class="register_area">
-        <input type="text" class="title">
-        <textarea name="" class="text_area"></textarea>
+    <div class="all_display">
+        <div id="memoArea"></div>
     </div>
 
-    <div class="button_area">
-        <div class="Select_button">
-            <button class="set_local">保存する</button>
-            <button class="display">表示する</button>
+    <div class="record_input">
+        <div class="register_area">
+            <input type="text" class="title">
+            <textarea name="" class="text_area"></textarea>
         </div>
-        <button class="remove_local">ストレージ削除</button>
-
+        <div class="button_area">
+            <div class="Select_button">
+                <button class="set_local">保存する</button>
+                <button class="display">表示する</button>
+            </div>
+            <button class="remove_local">ストレージ削除</button>
+        </div>
     </div>
 
-    <div id="memoArea">
-    </div>
+    <div class="pop_display"></div>
+
+
+
 
 
     <script src="/js/enter2.js"></script>
