--- a/html/enter.html
+++ b/html/enter.html
@@ -15,22 +15,30 @@
         <div id="memoArea"></div>
     </div>
 
-    <div class="record_input">
-        <div class="register_area">
-            <input type="text" class="title">
-            <textarea name="" class="text_area"></textarea>
-        </div>
-        <div class="button_area">
-            <div class="Select_button">
-                <button class="set_local">保存する</button>
-                <button class="display">表示する</button>
+    <div class="under">
+        <div class="record_input">
+            <div class="register_area">
+                <input type="text" class="title">
+                <textarea name="" class="text_area"></textarea>
             </div>
-            <button class="remove_local">ストレージ削除</button>
+            <div class="button_area">
+                <div class="Select_button">
+                    <button class="set_local">保存する</button>
+                    <button class="display">表示する</button>
+                </div>
+                <button class="remove_local">ストレージ削除</button>
+            </div>
+        </div>
+
+        <div class="pop_display">
+            <div id="pop_title">
+    
+            </div>
+            <div id="pop_text">
+
+            </div>
         </div>
     </div>
-
-    <div class="pop_display"></div>
-
 
 
 
