--- a/html/main.html
+++ b/html/main.html
@@ -11,18 +11,12 @@
 </head>
 
 <body>
-    <div class="memoApp">
-        <div class="memoForm">
-            <input type="text" id="title" class="form-control" placeholder="タイトル" />
-            <textarea class="form-control" rows="3" placeholder="本文" id="body"></textarea>
-            <button type="button" class="btn btn-primary btn-block" id="btnAdd">追加</button>
-        </div>
-
-        <div id="memoArea">
-        </div>
-
-        <button type="button" class="btn btn-primary btn-block" id="btnReset">リセット</button>
-    </div>
+    <h1>編集ページ</h1>
+    <input type="button" onclick="history.back()" value="戻る">
+    <input type="text" id="input_ss">
+    <textarea id="text_area_ss"></textarea>
+    
+    
     <script src="/js/main.js"></script>
 </body>
 
